<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_view"
    cardView:cardCornerRadius="@dimen/cornerRadius_cardView">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardView"
            android:background="@drawable/bosque"
            android:scaleType="centerCrop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usernameCard"
                android:text="@string/usernameCardText"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsizeusernamecard"/>
            
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstWordCard"
                    android:textSize="@dimen/firstWord_textSizeCard"
                    android:textColor="@android:color/white"/>


                <TextView
                    android:id="@+id/timeCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_textSizeCard"
                    android:layout_marginLeft="@dimen/timecard_leftmargin"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margin_top" >

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstWord_textSizeCard"
                    android:layout_marginLeft="@dimen/timecard_leftmargin" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:id="@+id/likeCheckCard"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:layout_weight="1"
                    android:checked="false" />
            </LinearLayout>


        </LinearLayout>


    </FrameLayout>









    </android.support.v7.widget.CardView>
